# sports_api

./: .pre-commit-config.yaml  alembic.ini  enums.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a42cfc432b59_.py
db/: config.py
db/models/: mixins.py  models.py
pydantic_schema/: schema.py
scraper/: nba.py
