[tool.poetry]
name = "sports-api"
version = "0.1.0"
description = ""
authors = ["Aleksander <walkowski.aleksander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.8"
alembic = "^1.12.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
pre-commit = "^3.5.0"

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true
isort = true


[tool.isort]
line_length = 88
# use black code style
profile = "black"
# add one line between `import abc` and `from abc import ABC`
lines_between_types = 1
# split imports to multline, when 2 or more imports in one line
force_grid_wrap = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
